kubernetes/efym-net/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: efym-net
  labels:
    app: nginx
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: efym-net
  template:
    metadata:
      labels:
        app: efym-net
    spec:
      containers:
      - name: efym-net
        image: codeberg.org/tw1zr/efym.net
