kubernetes/efym-net/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: efym-net-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`efym.net`) && PathPrefix(`/services`)
      kind: Rule
      priority: 10
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: efym-net
          port: 80
  tls:
    secretName: efym-net-tls
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: efym-net
  namespace: web
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`efym.net`)
      kind: Rule
      priority: 1
      services:
        - name: efym-net
          port: 80
  tls:
    secretName: efym-net-tls
